# inferx

./: .gitignore  .uvignore  CONFIG_GUIDE.md  DEVELOPER_GUIDE.md  README.md  TODO.md  USAGE.md  config_explanation.md  migration_plan.md  pydantic_analysis.md  pyproject.toml  pytest.ini  test_runner.py
.claude/: settings.local.json
data/: README.md
examples/: README.md  basic_usage.py  configuration_examples.py  example_config.yaml  settings_examples.py  yolo_detection_demo.py
inferx/: __init__.py  cli.py  exceptions.py  recovery.py  runtime.py  settings.py  utils.py
inferx/configs/: default.yaml
inferx/generators/: template.py
inferx/generators/templates/yolo/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
inferx/inferencers/: __init__.py  base.py  onnx_inferencer.py  openvino_inferencer.py  yolo.py  yolo_openvino.py
scripts/: README.md
scripts/examples/: config_demo.py  config_simple_demo.py  pydantic_config_example.py
scripts/old_examples/: configuration_examples.py
scripts/old_implementations/: config.py.old  config_validator.py.old  hybrid_config_implementation.py  runtime_with_validation.py  schemas.py.old  template_generator_with_validation.py
scripts/tests/: test_error_handling.py  test_template.py
tests/: README.md  __init__.py  conftest.py  test_base_inferencer.py  test_cli.py  test_cli_enhanced.py  test_config.py  test_openvino_inferencer.py  test_runtime.py  test_runtime_enhanced.py  test_utils.py  test_yolo.py
