[project]
name = "inferx-yolo-template"
version = "0.1.0"
description = "YOLO inference template for InferX"
dependencies = [
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.16.0"]
api = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "python-multipart>=0.0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"